updates; added razorhelpers; added tailbreeze

--- a/docs.html
+++ b/docs.html
@@ -77,6 +77,11 @@
                                     class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
                                 🔷 Noundry.Blazor
                             </button>
+                            <button @click="activeComponent = 'razorhelpers'"
+                                    :class="activeComponent === 'razorhelpers' ? 'text-primary-600 dark:text-primary-400 bg-primary-50 dark:bg-primary-900/20' : 'text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400'"
+                                    class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
+                                🧩 RazorHelpers
+                            </button>
                         </div>
                     </div>
 
@@ -3636,6 +3641,85 @@ Welcome to Our Service, <span class="text-blue-400">@Model.Name</span>!</code></
                         </p>
                         <a href="blazor-ui.html" class="inline-flex items-center text-primary-600 dark:text-primary-400 font-semibold hover:underline">
                             View Complete Blazor UI Docs →
+                        </a>
+                    </div>
+                </div>
+
+                <!-- RazorHelpers Documentation -->
+                <div x-show="activeComponent === 'razorhelpers'" class="max-w-4xl">
+                    <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">RazorHelpers</h1>
+                    <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
+                        Fluent HTML builder for ASP.NET Core minimal APIs. Render Razor components as HTML strings or IResult responses with type-safe collection builders.
+                    </p>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Installation</h2>
+                        <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm">
+                            <div class="text-purple-500">$ dotnet add package RazorHelpers</div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Setup</h2>
+                        <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm text-gray-300">
+                            <pre><code><span class="text-purple-400">using</span> RazorHelpers;
+
+<span class="text-purple-400">var</span> builder = WebApplication.CreateBuilder(args);
+builder.Services.<span class="text-green-400">AddRazorHelpers</span>();
+
+<span class="text-purple-400">var</span> app = builder.Build();</code></pre>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Key Features</h2>
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">🧩 Html Builder</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">80+ fluent HTML element methods with Class, Id, Attr, Style support</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">📊 TableBuilder</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Generate tables from collections with Column definitions and row styling</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">🔽 SelectBuilder</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Build dropdowns with Value/Text selectors, GroupBy, and selection states</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">⚡ Minimal API</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">RazorResults.Razor() returns IResult for endpoints directly</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Quick Example</h2>
+                        <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm text-gray-300 overflow-x-auto">
+                            <pre><code><span class="text-gray-500">// Fluent HTML building</span>
+<span class="text-purple-400">var</span> card = Html.<span class="text-green-400">Div</span>()
+    .<span class="text-green-400">Class</span>(<span class="text-orange-400">"card"</span>, <span class="text-orange-400">"shadow-lg"</span>)
+    .<span class="text-green-400">Child</span>(Html.<span class="text-green-400">H1</span>(<span class="text-orange-400">"Hello World"</span>))
+    .<span class="text-green-400">Child</span>(Html.<span class="text-green-400">P</span>(<span class="text-orange-400">"Built with RazorHelpers"</span>));
+
+<span class="text-gray-500">// Table from collection</span>
+<span class="text-purple-400">var</span> table = Html.<span class="text-green-400">Table</span>(users)
+    .<span class="text-green-400">Class</span>(<span class="text-orange-400">"table"</span>)
+    .<span class="text-green-400">Column</span>(<span class="text-orange-400">"Name"</span>, u => u.Name)
+    .<span class="text-green-400">Column</span>(<span class="text-orange-400">"Email"</span>, u => u.Email);
+
+<span class="text-gray-500">// Return from minimal API</span>
+app.<span class="text-green-400">MapGet</span>(<span class="text-orange-400">"/"</span>, () => RazorResults.<span class="text-green-400">Razor</span>(card));</code></pre>
+                        </div>
+                    </div>
+
+                    <div class="bg-primary-50 dark:bg-primary-900/20 border-l-4 border-primary-600 p-6 rounded-lg">
+                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">📚 Full Documentation</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">
+                            For complete API reference, all HTML element methods, and advanced examples, visit the RazorHelpers documentation page.
+                        </p>
+                        <a href="razorhelpers.html" class="inline-flex items-center text-primary-600 dark:text-primary-400 font-semibold hover:underline">
+                            View Complete RazorHelpers Docs →
                         </a>
                     </div>
                 </div>
