--- a/index.html
+++ b/index.html
@@ -547,6 +547,10 @@
                             <h4 class="font-semibold text-gray-900 dark:text-white"><a href="sanquhar.html" class="hover:text-accent-600 dark:hover:text-accent-400 transition-colors">Noundry.Sanquhar</a></h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Modern .NET 9 mailing library with Razor templates and multi-provider support</p>
                         </div>
+                        <div class="border-l-4 border-accent-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="razorhelpers.html" class="hover:text-accent-600 dark:hover:text-accent-400 transition-colors">RazorHelpers</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Fluent HTML builder for minimal APIs with TableBuilder and SelectBuilder for collections</p>
+                        </div>
                     </div>
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
@@ -554,7 +558,8 @@
                             npm install @noundry/elements<br>
                             dotnet add package Noundry.TagHelpers<br>
                             dotnet add package Noundry.Authnz<br>
-                            dotnet add package Noundry.Sanquhar
+                            dotnet add package Noundry.Sanquhar<br>
+                            dotnet add package RazorHelpers
                         </code>
                     </div>
                 </div>
