--- a/libraries.html
+++ b/libraries.html
@@ -391,6 +391,30 @@
                     </a>
                 </div>
 
+                <!-- Tailbreeze -->
+                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg hover:shadow-xl transition-shadow">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-cyan-100 dark:bg-cyan-900 rounded-lg flex items-center justify-center mr-4">
+                            <svg class="w-6 h-6 text-cyan-600 dark:text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-xl font-bold text-gray-900 dark:text-white">Tailbreeze</h3>
+                    </div>
+                    <p class="text-gray-600 dark:text-gray-300 mb-4">Zero-config Tailwind CSS integration for ASP.NET Core. Auto-installs CLI, watches for changes, and builds optimized CSS. No Node.js required.</p>
+
+                    <div class="text-sm font-mono bg-gray-100 dark:bg-gray-800 rounded p-2 mb-4">
+                        dotnet add package Tailbreeze
+                    </div>
+
+                    <a href="tailbreeze.html" class="inline-flex items-center text-cyan-600 dark:text-cyan-400 font-semibold">
+                        Learn More
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </a>
+                </div>
+
                 <!-- Noundry.Authnz -->
                 <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg hover:shadow-xl transition-shadow">
                     <div class="flex items-center mb-6">
