--- a/libraries.html
+++ b/libraries.html
@@ -924,10 +924,58 @@
                         </svg>
                     </a>
                 </div>
+
+                <!-- Noundry.Streams -->
+                <div class="bg-gray-50 dark:bg-gray-800 rounded-xl p-8 hover:shadow-lg transition-shadow">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-sky-100 dark:bg-sky-900 rounded-lg flex items-center justify-center mr-4">
+                            <svg class="w-6 h-6 text-sky-600 dark:text-sky-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-xl font-bold text-gray-900 dark:text-white">Noundry.Streams</h3>
+                    </div>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">High-performance event stream ingestion and relay service with 50K+ msg/sec throughput and sub-millisecond latency.</p>
+
+                    <div class="mb-6">
+                        <h4 class="font-semibold text-gray-900 dark:text-white mb-3">Features</h4>
+                        <ul class="space-y-2 text-gray-600 dark:text-gray-300">
+                            <li class="flex items-center">
+                                <svg class="w-4 h-4 text-sky-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                50K+ messages/second
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="w-4 h-4 text-sky-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Durable SQLite persistence
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="w-4 h-4 text-sky-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Built-in relay with retry
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="text-sm font-mono bg-gray-100 dark:bg-gray-800 rounded p-2 mb-4">
+                        dotnet tool install -g Noundry.Streams
+                    </div>
+
+                    <a href="streams.html" class="inline-flex items-center text-sky-600 dark:text-sky-400 font-semibold">
+                        View Documentation
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
-    
+
     <!-- AI/ML Libraries -->
      <!--
     <section class="py-20 bg-white dark:bg-gray-900">
