--- a/index.html
+++ b/index.html
@@ -2148,6 +2148,198 @@
         </div>
     </section>
 
+    <!-- noun.js Client UI Framework Section -->
+    <section id="noun-js" class="py-24 bg-gradient-to-br from-amber-50 to-orange-50 dark:from-gray-900 dark:to-gray-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <div class="inline-block mb-4 px-4 py-1 bg-amber-100 dark:bg-amber-900/30 rounded-full">
+                    <span class="text-amber-700 dark:text-amber-400 font-semibold text-sm">Client UI Framework</span>
+                </div>
+                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
+                    Introducing noun.js
+                </h2>
+                <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
+                    A minimalist, reactive UI micro-framework with lightning-fast builds, native CLI, and one-command deployment.
+                </p>
+            </div>
+
+            <div class="grid lg:grid-cols-2 gap-12 items-center mb-16">
+                <div>
+                    <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">
+                        Client-Side Simplicity
+                    </h3>
+                    <p class="text-lg text-gray-600 dark:text-gray-300 mb-6">
+                        <strong>noun.js</strong> is the client-side companion to Noundry.ts. While Noundry.ts handles full-stack TypeScript apps,
+                        noun.js focuses purely on reactive client UIs with optimized builds that ship only what's needed. Deploy instantly with the native CLI.
+                    </p>
+                    <div class="space-y-4 mb-8">
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-amber-600 dark:text-amber-400 mr-3 flex-shrink-0 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                            </svg>
+                            <div>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Lightning-Fast Builds</h4>
+                                <p class="text-gray-600 dark:text-gray-300">Blazing fast builds that ship only what's needed to the client - minimal bundle, maximum performance</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-amber-600 dark:text-amber-400 mr-3 flex-shrink-0 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                            </svg>
+                            <div>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Reactive Templates</h4>
+                                <p class="text-gray-600 dark:text-gray-300">Smart reactivity with direct DOM manipulation - no virtual DOM overhead</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-amber-600 dark:text-amber-400 mr-3 flex-shrink-0 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
+                            </svg>
+                            <div>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">One-Command Deploy</h4>
+                                <p class="text-gray-600 dark:text-gray-300">Native CLI with instant deployment to nounjs.app hosting platform - zero configuration</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-wrap gap-4">
+                        <a href="https://nounjs.com" target="_blank" class="inline-flex items-center bg-amber-600 hover:bg-amber-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                            Explore noun.js
+                            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/noundry/nounjs" target="_blank" class="inline-flex items-center bg-gray-800 hover:bg-gray-900 dark:bg-gray-700 dark:hover:bg-gray-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                            <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                            </svg>
+                            View on GitHub
+                        </a>
+                    </div>
+                </div>
+
+                <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
+                    <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-6">Reactive Template Syntax</h4>
+                    <div class="bg-gray-900 rounded-lg p-6 mb-6 overflow-x-auto">
+                        <pre class="text-sm font-mono"><code><span class="text-gray-400">&lt;!-- Reactive interpolation --&gt;</span>
+<span class="text-blue-400">&lt;h1&gt;</span><span class="text-amber-400">{</span> <span class="text-green-400">title</span> <span class="text-amber-400">}</span><span class="text-blue-400">&lt;/h1&gt;</span>
+
+<span class="text-gray-400">&lt;!-- Conditionals --&gt;</span>
+<span class="text-blue-400">&lt;div</span> <span class="text-purple-400">:if</span>=<span class="text-green-400">"isLoggedIn"</span><span class="text-blue-400">&gt;</span>Welcome!<span class="text-blue-400">&lt;/div&gt;</span>
+<span class="text-blue-400">&lt;div</span> <span class="text-purple-400">:else</span><span class="text-blue-400">&gt;</span>Please log in<span class="text-blue-400">&lt;/div&gt;</span>
+
+<span class="text-gray-400">&lt;!-- Loops --&gt;</span>
+<span class="text-blue-400">&lt;ul</span> <span class="text-purple-400">:for</span>=<span class="text-green-400">"item in items"</span><span class="text-blue-400">&gt;</span>
+  <span class="text-blue-400">&lt;li&gt;</span><span class="text-amber-400">{</span> <span class="text-green-400">item.name</span> <span class="text-amber-400">}</span><span class="text-blue-400">&lt;/li&gt;</span>
+<span class="text-blue-400">&lt;/ul&gt;</span>
+
+<span class="text-gray-400">&lt;!-- Event binding --&gt;</span>
+<span class="text-blue-400">&lt;button</span> <span class="text-purple-400">@click</span>=<span class="text-green-400">"handleClick"</span><span class="text-blue-400">&gt;</span>Click<span class="text-blue-400">&lt;/button&gt;</span></code></pre>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="flex items-center text-sm">
+                            <svg class="w-5 h-5 text-amber-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700 dark:text-gray-300">Global state management with watchers</span>
+                        </div>
+                        <div class="flex items-center text-sm">
+                            <svg class="w-5 h-5 text-amber-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700 dark:text-gray-300">Client-side router with guards</span>
+                        </div>
+                        <div class="flex items-center text-sm">
+                            <svg class="w-5 h-5 text-amber-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700 dark:text-gray-300">Pre-built UI components included</span>
+                        </div>
+                        <div class="flex items-center text-sm">
+                            <svg class="w-5 h-5 text-amber-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            <span class="text-gray-700 dark:text-gray-300">Instant deploy to nounjs.app</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Comparison: Noundry.ts vs noun.js -->
+            <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
+                <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-4 text-center">Choose Your Approach</h3>
+                <p class="text-center text-gray-600 dark:text-gray-300 mb-8 max-w-3xl mx-auto">
+                    Both frameworks share the same standards-first philosophy. Choose based on your project needs.
+                </p>
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="p-6 bg-blue-50 dark:bg-blue-900/20 rounded-lg border border-blue-200 dark:border-blue-800">
+                        <div class="flex items-center mb-4">
+                            <div class="w-10 h-10 bg-blue-100 dark:bg-blue-900/50 rounded-lg flex items-center justify-center mr-3">
+                                <svg class="w-6 h-6 text-blue-600 dark:text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M5 12a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v4a2 2 0 01-2 2M5 12a2 2 0 00-2 2v4a2 2 0 002 2h14a2 2 0 002-2v-4a2 2 0 00-2-2"></path>
+                                </svg>
+                            </div>
+                            <h4 class="text-xl font-bold text-gray-900 dark:text-white">Noundry.ts</h4>
+                        </div>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Full-stack TypeScript framework for complete applications</p>
+                        <ul class="space-y-2 text-sm text-gray-600 dark:text-gray-300">
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Server-side rendering with HonoX
+                            </li>
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Drizzle ORM for database access
+                            </li>
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Built-in authentication
+                            </li>
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Bun runtime (3x faster than Node)
+                            </li>
+                        </ul>
+                        <div class="mt-4 pt-4 border-t border-blue-200 dark:border-blue-700">
+                            <span class="text-sm font-semibold text-blue-700 dark:text-blue-400">Best for: Full-stack apps, APIs, SSR</span>
+                        </div>
+                    </div>
+                    <div class="p-6 bg-amber-50 dark:bg-amber-900/20 rounded-lg border border-amber-200 dark:border-amber-800">
+                        <div class="flex items-center mb-4">
+                            <div class="w-10 h-10 bg-amber-100 dark:bg-amber-900/50 rounded-lg flex items-center justify-center mr-3">
+                                <svg class="w-6 h-6 text-amber-600 dark:text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                                </svg>
+                            </div>
+                            <h4 class="text-xl font-bold text-gray-900 dark:text-white">noun.js</h4>
+                        </div>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Lightweight client-side micro-framework for reactive UIs</p>
+                        <ul class="space-y-2 text-sm text-gray-600 dark:text-gray-300">
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Lightning-fast optimized builds
+                            </li>
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Native CLI + nounjs.app hosting
+                            </li>
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Noundry UI components (Tailwind or shadcn/ui style)
+                            </li>
+                            <li class="flex items-center">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Direct DOM, works with any backend
+                            </li>
+                        </ul>
+                        <div class="mt-4 pt-4 border-t border-amber-200 dark:border-amber-700">
+                            <span class="text-sm font-semibold text-amber-700 dark:text-amber-400">Best for: SPAs, widgets, existing backends</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Pricing Section -->
     <section id="pricing" class="py-20 bg-gray-50 dark:bg-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
