updates to hide pricing for pre-launch

--- a/blocks.html
+++ b/blocks.html
@@ -49,11 +49,8 @@
                             <li>🚀 <strong>Early Access</strong> - New blocks before public release</li>
                         </ul>
                         <div class="flex gap-3">
-                            <a href="https://noundry.com/pricing" class="inline-block bg-purple-600 hover:bg-purple-700 text-white px-6 py-2 rounded-lg font-semibold transition-colors">
-                                Upgrade to Pro
-                            </a>
-                            <a href="https://noundry.com/blocks/compare" class="inline-block border-2 border-purple-600 text-purple-600 dark:text-purple-400 hover:bg-purple-50 dark:hover:bg-purple-900/20 px-6 py-2 rounded-lg font-semibold transition-colors">
-                                Compare Plans
+                            <a href="index.html#home" class="inline-block bg-purple-600 hover:bg-purple-700 text-white px-6 py-2 rounded-lg font-semibold transition-colors">
+                                Join Waitlist
                             </a>
                         </div>
                     </div>
@@ -1282,8 +1279,8 @@
                 <a href="getting-started.html" class="inline-block bg-purple-600 hover:bg-purple-700 text-white px-8 py-4 rounded-lg font-semibold transition-colors">
                     Get Started Free
                 </a>
-                <a href="https://noundry.com/pricing" class="inline-block border-2 border-purple-600 text-purple-600 dark:text-purple-400 hover:bg-purple-50 dark:hover:bg-purple-900/20 px-8 py-4 rounded-lg font-semibold transition-colors">
-                    Upgrade to Pro
+                <a href="index.html#home" class="inline-block border-2 border-purple-600 text-purple-600 dark:text-purple-400 hover:bg-purple-50 dark:hover:bg-purple-900/20 px-8 py-4 rounded-lg font-semibold transition-colors">
+                    Join Waitlist
                 </a>
             </div>
         </div>
