--- a/lander.html
+++ b/lander.html
@@ -390,8 +390,8 @@
                                 <span class="text-gray-700 dark:text-gray-300">Video tutorials & courses</span>
                             </li>
                         </ul>
-                        <a :href="billingCycle === 'annual' ? 'https://buy.stripe.com/9B63co16W9ZYdZH425gjC01' : 'https://buy.stripe.com/7sYbIU5ncc866xf6adgjC05'" class="block w-full bg-dotnet-500 hover:bg-dotnet-600 text-white py-3 px-6 rounded-lg font-semibold transition-colors text-center">
-                            Start Developer Plan
+                        <a href="index.html#home" class="block w-full bg-dotnet-500 hover:bg-dotnet-600 text-white py-3 px-6 rounded-lg font-semibold transition-colors text-center">
+                            Join Waitlist
                         </a>
                     </div>
 
@@ -435,8 +435,8 @@
                                 <span class="text-gray-700 dark:text-gray-300">Team training & custom blueprints</span>
                             </li>
                         </ul>
-                        <a :href="billingCycle === 'annual' ? 'https://buy.stripe.com/aFa7sEdTIege5tb6adgjC02' : 'https://buy.stripe.com/5kQcMY02S7RQaNveGJgjC04'" class="block w-full bg-gray-900 hover:bg-gray-800 dark:bg-gray-700 dark:hover:bg-gray-600 text-white py-3 px-6 rounded-lg font-semibold transition-colors text-center">
-                            Start Team Plan
+                        <a href="index.html#home" class="block w-full bg-gray-900 hover:bg-gray-800 dark:bg-gray-700 dark:hover:bg-gray-600 text-white py-3 px-6 rounded-lg font-semibold transition-colors text-center">
+                            Join Waitlist
                         </a>
                     </div>
                 </div>
