--- a/blueprints.html
+++ b/blueprints.html
@@ -49,11 +49,8 @@
                             <li>🚀 <strong>Early Access</strong> - New blueprints and features before public release</li>
                         </ul>
                         <div class="flex gap-3">
-                            <a href="https://noundry.com/pricing" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg font-semibold transition-colors">
-                                Upgrade to Pro
-                            </a>
-                            <a href="https://noundry.com/blueprints/compare" class="inline-block border-2 border-blue-600 text-blue-600 dark:text-blue-400 hover:bg-blue-50 dark:hover:bg-blue-900/20 px-6 py-2 rounded-lg font-semibold transition-colors">
-                                Compare Plans
+                            <a href="index.html#home" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg font-semibold transition-colors">
+                                Join Waitlist
                             </a>
                         </div>
                     </div>
@@ -1400,8 +1397,8 @@ loadProducts();</code></pre>
                 These blueprints are production-ready patterns you can implement immediately. Upgrade to Pro for 500+ more examples and advanced features.
             </p>
             <div class="flex gap-4 justify-center">
-                <a href="https://noundry.com/pricing" class="inline-block bg-primary-600 hover:bg-primary-700 text-white px-8 py-4 rounded-lg font-semibold transition-colors">
-                    Upgrade to Pro
+                <a href="index.html#home" class="inline-block bg-primary-600 hover:bg-primary-700 text-white px-8 py-4 rounded-lg font-semibold transition-colors">
+                    Join Waitlist
                 </a>
                 <a href="docs.html" class="inline-block border-2 border-primary-600 text-primary-600 dark:text-primary-400 hover:bg-primary-50 dark:hover:bg-primary-900/20 px-8 py-4 rounded-lg font-semibold transition-colors">
                     View Docs
