--- a/help.html
+++ b/help.html
@@ -84,10 +84,8 @@
                 <div class="bg-gray-50 dark:bg-gray-800 rounded-xl p-6">
                     <h3 class="text-xl font-bold mb-3 flex items-center"><svg class="w-6 h-6 text-orange-600 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>Pricing & Licensing</h3>
                     <ul class="space-y-2 text-gray-600 dark:text-gray-300">
-                        <li><a href="pricing.html" class="hover:text-primary-600">Pricing Plans</a></li>
-                        <li><a href="pricing.html#solo" class="hover:text-primary-600">Solo License</a></li>
-                        <li><a href="pricing.html#team" class="hover:text-primary-600">Team License</a></li>
-                        <li><a href="pricing.html#enterprise" class="hover:text-primary-600">Enterprise</a></li>
+                        <li><span class="text-amber-600 dark:text-amber-400 font-medium">Pricing Coming Soon</span></li>
+                        <li><a href="index.html#home" class="hover:text-primary-600">Join Waitlist</a></li>
                     </ul>
                 </div>
             </div>
