--- a/index.html
+++ b/index.html
@@ -12,16 +12,71 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div>
+                    <!-- Coming Soon Badge -->
+                    <div class="inline-flex items-center px-4 py-2 bg-amber-100 dark:bg-amber-900/30 border border-amber-300 dark:border-amber-700 rounded-full mb-6">
+                        <span class="relative flex h-3 w-3 mr-2">
+                            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-amber-400 opacity-75"></span>
+                            <span class="relative inline-flex rounded-full h-3 w-3 bg-amber-500"></span>
+                        </span>
+                        <span class="text-amber-800 dark:text-amber-200 font-semibold text-sm">Coming Soon - Work in Progress</span>
+                    </div>
                     <h1 class="text-5xl lg:text-6xl font-bold text-gray-900 dark:text-white mb-6 leading-tight">
                         Modern <span class="text-primary-600 dark:text-primary-400">C#</span> Development Platform
                     </h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8 leading-relaxed">
                         Build faster, deploy smarter, and scale effortlessly with Noundry's comprehensive suite of C# libraries, blocks, blueprints, and AI-powered CLI tools.
                     </p>
+
+                    <!-- Launch Signup Form -->
+                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg border border-gray-200 dark:border-gray-700 mb-6" x-data="{ email: '', submitted: false, error: '', loading: false }">
+                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">Get notified when we launch</h3>
+                        <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">Be the first to know when Noundry is ready for you.</p>
+                        <form @submit.prevent="
+                            if (!email || !email.includes('@')) { error = 'Please enter a valid email'; return; }
+                            loading = true;
+                            error = '';
+                            fetch('https://nounjs.app/api/launchlist', {
+                                method: 'POST',
+                                headers: { 'Content-Type': 'application/json' },
+                                body: JSON.stringify({ email: email })
+                            })
+                            .then(res => {
+                                loading = false;
+                                if (res.ok) {
+                                    submitted = true;
+                                } else {
+                                    error = 'Something went wrong. Please try again.';
+                                }
+                            })
+                            .catch(() => {
+                                loading = false;
+                                error = 'Something went wrong. Please try again.';
+                            });
+                        " class="flex flex-col sm:flex-row gap-3">
+                            <template x-if="!submitted">
+                                <div class="flex flex-col sm:flex-row gap-3 w-full">
+                                    <input type="email" x-model="email" placeholder="Enter your email"
+                                        class="flex-1 px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white focus:ring-2 focus:ring-primary-500 focus:border-transparent outline-none transition-all">
+                                    <button type="submit" :disabled="loading"
+                                        class="bg-primary-600 hover:bg-primary-700 disabled:bg-primary-400 text-white px-6 py-3 rounded-lg font-semibold transition-colors whitespace-nowrap">
+                                        <span x-show="!loading">Notify Me</span>
+                                        <span x-show="loading">Sending...</span>
+                                    </button>
+                                </div>
+                            </template>
+                            <template x-if="submitted">
+                                <div class="flex items-center text-green-600 dark:text-green-400 font-medium">
+                                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                    </svg>
+                                    Thanks! We'll notify you when we launch.
+                                </div>
+                            </template>
+                        </form>
+                        <p x-show="error" x-text="error" class="text-red-500 text-sm mt-2"></p>
+                    </div>
+
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="pricing.html" class="bg-primary-600 hover:bg-primary-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
-                            Start Building Today
-                        </a>
                         <a href="docs.html" class="border-2 border-primary-600 text-primary-600 dark:text-primary-400 hover:bg-primary-50 dark:hover:bg-primary-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                             View Documentation
                         </a>
@@ -2340,8 +2395,8 @@
         </div>
     </section>
 
-    <!-- Pricing Section -->
-    <section id="pricing" class="py-20 bg-gray-50 dark:bg-gray-800">
+    <!-- Pricing Section - HIDDEN: Coming Soon -->
+    <section id="pricing" class="hidden py-20 bg-gray-50 dark:bg-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Simple, Transparent Pricing</h2>
