--- a/logably.html
+++ b/logably.html
@@ -405,8 +405,8 @@
                             <span class="text-gray-700 dark:text-gray-300">Community support</span>
                         </div>
                     </div>
-                    <a href="pricing.html" class="block w-full text-center bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-white px-6 py-3 rounded-lg font-semibold hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors">
-                        Get Started Free
+                    <a href="index.html#home" class="block w-full text-center bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-white px-6 py-3 rounded-lg font-semibold hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors">
+                        Join Waitlist
                     </a>
                 </div>
 
@@ -458,8 +458,8 @@
                             <span class="text-gray-700 dark:text-gray-300">Priority email support</span>
                         </div>
                     </div>
-                    <a href="pricing.html" class="block w-full text-center bg-amber-600 hover:bg-amber-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
-                        Upgrade to Pro
+                    <a href="index.html#home" class="block w-full text-center bg-amber-600 hover:bg-amber-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                        Join Waitlist
                     </a>
                 </div>
 
@@ -508,7 +508,7 @@
                             <span class="text-gray-700 dark:text-gray-300">On-premises option</span>
                         </div>
                     </div>
-                    <a href="pricing.html" class="block w-full text-center bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-white px-6 py-3 rounded-lg font-semibold hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors">
+                    <a href="contact.html" class="block w-full text-center bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-white px-6 py-3 rounded-lg font-semibold hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors">
                         Contact Sales
                     </a>
                 </div>
