updates for pre-launch

--- a/cloud.html
+++ b/cloud.html
@@ -31,7 +31,7 @@
                     <a href="#quickstart" class="bg-cyan-600 hover:bg-cyan-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         Quick Start Guide
                     </a>
-                    <a href="https://github.com/noundry" target="_blank" class="border-2 border-cyan-600 text-cyan-600 dark:text-cyan-400 hover:bg-cyan-50 dark:hover:bg-cyan-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
+                    <a href="https://github.com/noundry" target="_blank" class="hidden border-2 border-cyan-600 text-cyan-600 dark:text-cyan-400 hover:bg-cyan-50 dark:hover:bg-cyan-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         View on GitHub
                     </a>
                 </div>
