--- a/elements.html
+++ b/elements.html
@@ -37,7 +37,7 @@ x-init="$watch('darkMode', val => localStorage.setItem('darkMode', val))"
                     <a href="#components" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         View Components
                     </a>
-                    <a href="https://github.com/noundry" target="_blank" class="border-2 border-blue-600 text-blue-600 dark:text-blue-400 hover:bg-blue-50 dark:hover:bg-blue-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
+                    <a href="https://github.com/noundry" target="_blank" class="hidden border-2 border-blue-600 text-blue-600 dark:text-blue-400 hover:bg-blue-50 dark:hover:bg-blue-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         GitHub Repository
                     </a>
                 </div>
