--- a/engine.html
+++ b/engine.html
@@ -241,7 +241,7 @@
                 </div>
 
                 <div class="mt-12 text-center">
-                    <a href="https://github.com/noundry/noundry-engine-cli#readme" target="_blank" class="text-primary-600 dark:text-primary-400 hover:text-primary-700 dark:hover:text-primary-300 font-semibold inline-flex items-center gap-2">
+                    <a href="https://github.com/noundry/noundry-engine-cli#readme" target="_blank" class="hidden text-primary-600 dark:text-primary-400 hover:text-primary-700 dark:hover:text-primary-300 font-semibold inline-flex items-center gap-2">
                         Read the full documentation
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
