--- a/lander.html
+++ b/lander.html
@@ -342,7 +342,7 @@
                                 <span class="text-gray-700 dark:text-gray-300">GitHub access</span>
                             </li>
                         </ul>
-                        <a href="https://github.com/noundryfx" target="_blank" class="block w-full bg-gray-200 hover:bg-gray-300 dark:bg-gray-700 dark:hover:bg-gray-600 text-gray-900 dark:text-white py-3 px-6 rounded-lg font-semibold transition-colors text-center">
+                        <a href="https://github.com/noundryfx" target="_blank" class="hidden block w-full bg-gray-200 hover:bg-gray-300 dark:bg-gray-700 dark:hover:bg-gray-600 text-gray-900 dark:text-white py-3 px-6 rounded-lg font-semibold transition-colors text-center">
                             Get Started
                         </a>
                     </div>
