--- a/razorhelpers.html
+++ b/razorhelpers.html
@@ -619,7 +619,7 @@ app.<span class="text-green-400">MapGet</span>(<span class="text-orange-400">"/u
                 <span class="text-purple-400">$</span> dotnet add package RazorHelpers
             </div>
             <div class="mt-8 flex justify-center gap-4">
-                <a href="https://github.com/noundry/RazorHelpers" class="bg-white text-purple-600 hover:bg-purple-50 px-6 py-3 rounded-lg font-semibold transition-colors">
+                <a href="https://github.com/noundry/RazorHelpers" class="hidden bg-white text-purple-600 hover:bg-purple-50 px-6 py-3 rounded-lg font-semibold transition-colors">
                     View on GitHub
                 </a>
                 <a href="https://www.nuget.org/packages/RazorHelpers" class="border-2 border-white text-white hover:bg-white/10 px-6 py-3 rounded-lg font-semibold transition-colors">
