--- a/ai-gateway.html
+++ b/ai-gateway.html
@@ -27,7 +27,7 @@
                     <a href="#quickstart" class="px-8 py-3 bg-primary-600 hover:bg-primary-700 text-white rounded-lg font-medium transition-colors">
                         Quick Start
                     </a>
-                    <a href="https://github.com/noundry/aig" class="px-8 py-3 bg-white dark:bg-gray-800 border-2 border-gray-300 dark:border-gray-600 hover:border-primary-600 dark:hover:border-primary-400 text-gray-900 dark:text-white rounded-lg font-medium transition-colors">
+                    <a href="https://github.com/noundry/aig" class="hidden px-8 py-3 bg-white dark:bg-gray-800 border-2 border-gray-300 dark:border-gray-600 hover:border-primary-600 dark:hover:border-primary-400 text-gray-900 dark:text-white rounded-lg font-medium transition-colors">
                         View on GitHub
                     </a>
                 </div>
