--- a/connector.html
+++ b/connector.html
@@ -21,7 +21,7 @@
                     <a href="#installation" class="bg-primary-600 hover:bg-primary-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         Get Started
                     </a>
-                    <a href="https://github.com/noundry" class="border-2 border-primary-600 text-primary-600 dark:text-primary-400 hover:bg-primary-50 dark:hover:bg-primary-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
+                    <a href="https://github.com/noundry" class="hidden border-2 border-primary-600 text-primary-600 dark:text-primary-400 hover:bg-primary-50 dark:hover:bg-primary-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         View on GitHub
                     </a>
                 </div>
@@ -632,7 +632,7 @@ noundry-connector diff \
 
                         <div>
                             <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Q: How do I contribute or report issues?</h4>
-                            <p class="text-gray-600 dark:text-gray-300">A: Visit our <a href="https://github.com/noundry" class="text-primary-600 dark:text-primary-400 hover:underline">GitHub repository</a> to report issues, request features, or contribute to the project.</p>
+                            <p class="text-gray-600 dark:text-gray-300">A: Visit our <a href="https://github.com/noundry" class="hidden text-primary-600 dark:text-primary-400 hover:underline">GitHub repository</a> to report issues, request features, or contribute to the project.</p>
                         </div>
                     </div>
                 </div>
