--- a/docs.html
+++ b/docs.html
@@ -74,7 +74,7 @@
                             </button>
                             <button @click="activeComponent = 'blazor'"
                                     :class="activeComponent === 'blazor' ? 'text-primary-600 dark:text-primary-400 bg-primary-50 dark:bg-primary-900/20' : 'text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400'"
-                                    class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
+                                    class="hidden w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
                                 🔷 Noundry.Blazor
                             </button>
                             <button @click="activeComponent = 'razorhelpers'"
