--- a/libraries.html
+++ b/libraries.html
@@ -367,8 +367,8 @@
                     </a>
                 </div>
 
-                <!-- Noundry.Blazor -->
-                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg hover:shadow-xl transition-shadow">
+                <!-- Noundry.Blazor - Hidden for pre-launch -->
+                <div class="hidden bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg hover:shadow-xl transition-shadow">
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 bg-purple-100 dark:bg-purple-900 rounded-lg flex items-center justify-center mr-4">
                             <svg class="w-6 h-6 text-purple-600 dark:text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
