--- a/tailbreeze.html
+++ b/tailbreeze.html
@@ -26,7 +26,7 @@
                     <a href="#quickstart" class="bg-cyan-600 hover:bg-cyan-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         Quick Start
                     </a>
-                    <a href="https://github.com/noundry/tailbreeze" target="_blank" class="border-2 border-cyan-600 text-cyan-600 dark:text-cyan-400 hover:bg-cyan-50 dark:hover:bg-cyan-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
+                    <a href="https://github.com/noundry/tailbreeze" target="_blank" class="hidden border-2 border-cyan-600 text-cyan-600 dark:text-cyan-400 hover:bg-cyan-50 dark:hover:bg-cyan-900/20 px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
                         View on GitHub
                     </a>
                 </div>
@@ -611,7 +611,7 @@ $ curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download
                 <a href="#quickstart" class="bg-white text-cyan-600 hover:bg-cyan-50 px-8 py-4 rounded-lg text-lg font-semibold transition-colors">
                     Get Started
                 </a>
-                <a href="https://github.com/noundry/tailbreeze" target="_blank" class="border-2 border-white text-white hover:bg-white hover:text-cyan-600 px-8 py-4 rounded-lg text-lg font-semibold transition-colors">
+                <a href="https://github.com/noundry/tailbreeze" target="_blank" class="hidden border-2 border-white text-white hover:bg-white hover:text-cyan-600 px-8 py-4 rounded-lg text-lg font-semibold transition-colors">
                     View on GitHub
                 </a>
             </div>
