updates for pre-launch

--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@
     </section>
 
     <!-- Blazor UI Section -->
-    <section id="blazor" class="py-20 bg-gradient-to-br from-purple-50 to-pink-50 dark:from-gray-800 dark:to-gray-900">
+    <!--<section id="blazor" class="py-20 bg-gradient-to-br from-purple-50 to-pink-50 dark:from-gray-800 dark:to-gray-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="mb-20">
                 <div class="grid lg:grid-cols-2 gap-12 items-center">
@@ -1368,7 +1368,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+    
 
     <!-- TagHelpers UI Section -->
     <section id="taghelpers" class="py-20 bg-white dark:bg-gray-900">
