updates for pre-launch

--- a/index.html
+++ b/index.html
@@ -2394,9 +2394,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </section>
-    -->
+    
 
     <!-- Pricing Section - HIDDEN: Coming Soon -->
     <section id="pricing" class="hidden py-20 bg-gray-50 dark:bg-gray-800">
